[package]
name = "fox"
version = "0.9.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.9.4"
clap = { version = "3.2.12", features = ["derive"] }
rand = "0.8.5"
tokio = { version = "1.20.0", features = ["full"] }
loading = "*"
sha2 = "0.10.2"
hex-literal = "0.3.4"
hex = "0.4.3"
